--- a/carrer connector/public/form.html
+++ b/carrer connector/public/form.html
@@ -9,14 +9,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="Images/logo.jpg" alt="logoimage" class="rounded-circle" style="width: 50px; height: auto;"></img></a>
+            <a class="navbar-brand" href="#"><img src="image/logo.jpg" alt="logoimage" class="rounded-circle" style="width: 50px; height: auto;"></img></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link btn btn-primary text-black" href="post.html">POST</a>
+                        <a class="nav-link btn btn-primary text-black" href="postView.html">View_posts</a>
                     </li>
                 </ul>
             </div>
@@ -27,7 +27,7 @@
             <div class="m-5 w-50 border border-primary rounded p-3">
                     <h2 class="text-primary">Build Your Profile Today</h2>
                     <p class="mt-3">Showcase Your Services: Let Customers Discover Your Posts and Reach Out to You Directly!</p>
-                    <form id="postForm" class="bg-white"> <!-- Added ID -->
+                    <form id="postForm" class="bg-white">
                     <div class="d-flex flex-wrap p-4">
                         <div class="mt-1">
                             <input type="text" id="Profession" name="Profession" class="form-control w-75 mr-4" placeholder="Profession">
