--- a/carrer connector/public/index.html
+++ b/carrer connector/public/index.html
@@ -55,6 +55,6 @@
             </div>
         </div>
     </section> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="bootstrap.js"></script>
 </body>
 </html>
